# GenTL

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: docs.yml  test.yml
docs/: CMakeLists.txt  mainpage.md
examples/: CMakeLists.txt  mcmc.cpp  particle_filter.cpp
include/gentl/: concepts.h  types.h
include/gentl/inference/: mcmc.h  particle_filter.h  sir.h
include/gentl/learning/: supervised.h
include/gentl/modeling/: sequence.h
include/gentl/util/: chunks.h  mathutils.h  randutils.h
tests/: CMakeLists.txt  mcmc.cpp  particle_filter.cpp  seed_sequence.cpp  sequence.cpp  sir.cpp  train_supervised.cpp
